--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,20 @@
       name="Green Drive Through"
       content="Green Drive Through"
     />
+    <meta name="language" content="zh-TW">
+    <meta name="keywords" content="ESG,永續,故問,報告書,資料分析">
+    <link name="canonical" content="https://greendrivethrough.com.tw/">
+    <meta name="og:site_name" content="ESG Drive Thru">
+    <meta name="og:type" content="website">
+    <meta name="og:title" content="ESG Drive Thru">
+    <meta name="og:description" content="ESG 報告書顧問與整合行銷、國內 ESG 趨勢分析平台以及 ESG 教育培訓等">
+    <mate name="og:url" content="https://greendrivethrough.com.tw/">
+    <meta name="og:image" content="https://greendrivethrough.com.tw/og.png">
+    <meta name="og:image:width" content="800">
+    <meta name="og:image:height" content="600">
+    <meta name="og:locale" content="us">
+    <meta name="robots" content="all">
+    <meta name="googlebot" content="all">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
