--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
     <meta name="og:title" content="Green Drive Thru" />
     <meta name="og:description" content="ESG 報告書顧問與整合行銷、國內 ESG 趨勢分析平台以及 ESG 教育培訓等" />
     <mate name="og:url" content="https://greendrivethrough.com.tw/" />
-    <meta name="og:image" content="https://greendrivethrough.com.tw/og.png" data-react-helmet="true"/>
+    <meta name="og:image" content="https://greendrivethrough.com.tw/og.png" />
     <meta name="og:image:width" content="800" />
     <meta name="og:image:height" content="600" />
     <meta name="og:locale" content="us" />
