--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,13 +8,13 @@
     <meta name="Green Drive Thru" content="Green Drive Thru" />
     <meta name="language" content="zh-TW" />
     <meta name="keywords" content="ESG,永續,故問,報告書,資料分析" />
-    <link rel="canonical" name="canonical" content="https://greendrivethrough.com.tw/" />
+    <link rel="canonical" name="canonical" content="https://greendrivethru.com.tw/" />
     <meta name="og:site_name" content="Green Drive Thru" />
     <meta name="og:type" content="website" />
     <meta name="og:title" content="Green Drive Thru" />
     <meta name="og:description" content="ESG 報告書顧問與整合行銷、國內 ESG 趨勢分析平台以及 ESG 教育培訓等" />
-    <mate name="og:url" content="https://greendrivethrough.com.tw/" />
-    <meta name="og:image" content="https://greendrivethrough.com.tw/og.png" />
+    <mate name="og:url" content="https://greendrivethru.com.tw/" />
+    <meta name="og:image" content="https://greendrivethru.com.tw/og.png" />
     <meta name="og:image:width" content="800" />
     <meta name="og:image:height" content="600" />
     <meta name="og:locale" content="us" />
